unpackaged/main/default/objects/PersonExamination/fields/Certification_Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Exam_Type__c</fullName>
    <label>Certification Exam</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CompTIA Security+</fullName>
            </value>
            <value>
                <fullName>CompTIA Network+</fullName>
            </value>
            <value>
                <fullName>CompTIA A+ Core 1</fullName>
            </value>
            <value>
                <fullName>CompTIA A+ Core 2</fullName>
            </value>
            <value>
                <fullName>CompTIA CySA+</fullName>
            </value>
            <value>
                <fullName>Cisco CCNA</fullName>
            </value>
            <value>
                <fullName>Wonderlic SLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>