unpackaged/main/default/objects/PersonExamination/fields/Digital_Badge_Issued__c.field-meta.xml
<CustomField>
    <fullName>Digital_Badge_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Badge Issued</label>
    <type>Checkbox</type>
</CustomField>