unpackaged/main/default/objects/PersonExamination/fields/Exam_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Exam_Vendor__c</fullName>
    <label>Exam Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pearson VUE</fullName>
            </value>
            <value>
                <fullName>CompTIA</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Wonderlic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>