unpackaged/main/default/objects/PersonExamination/fields/Is_Plus_Retake__c.field-meta.xml
<CustomField>
    <fullName>Is_Plus_Retake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Plus Retake</label>
    <type>Checkbox</type>
</CustomField>