unpackaged/main/default/objects/PersonExamination/fields/Lead_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Instructor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Instructor_Examinations</relationshipName>
    <type>Lookup</type>
</CustomField>