unpackaged/main/default/objects/PersonExamination/fields/Retake_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Retake_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retake Fee Waived</label>
    <type>Checkbox</type>
</CustomField>