unpackaged/main/default/objects/PersonExamination/fields/Scheduled_Exam_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Exam_Time__c</fullName>
    <label>Scheduled Exam Time</label>
    <type>Time</type>
</CustomField>