unpackaged/main/default/objects/PersonExamination/fields/Score_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Score_Report_URL__c</fullName>
    <label>Score Report URL</label>
    <type>Url</type>
</CustomField>