unpackaged/main/default/objects/PersonExamination/fields/Testing_Location__c.field-meta.xml
<CustomField>
    <fullName>Testing_Location__c</fullName>
    <label>Testing Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-Campus Testing Center</fullName>
            </value>
            <value>
                <fullName>Online / Home Proctor</fullName>
            </value>
            <value>
                <fullName>Third-Party Testing Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>