unpackaged/main/default/objects/PersonExamination/fields/Voucher_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Expiration_Date__c</fullName>
    <label>Voucher Expiration Date</label>
    <type>Date</type>
</CustomField>