unpackaged/main/default/objects/PersonExamination/fields/Voucher_Number__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number__c</fullName>
    <label>Voucher Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>